2021-06-09  Tom Tromey  <tromey@adacore.com>

	* README (Example): Update read1 example.

2021-06-09  Simon Marchi  <simon.marchi@polymtl.ca>

	* lib/tuiterm.exp (Term) <_check_box>: Improve logging.

2021-06-08  Lancelot Six  <lsix@lancelotsix.com>

	* gdb.base/premature-dummy-frame-removal.py (TestUnwinder): Use
	'is None' instead of '== None' and 'is not None' instead of
	'!= None'.
	* gdb.python/py-frame-args.py (lookup_function): Same.
	* gdb.python/py-framefilter-invalidarg.py (Reverse_Function): Same.
	* gdb.python/py-framefilter.py (Reverse_Function): Same.
	* gdb.python/py-nested-maps.py (lookup_function): Same.
	* gdb.python/py-objfile-script-gdb.py (lookup_function): Same.
	* gdb.python/py-prettyprint.py (lookup_function): Same.
	* gdb.python/py-section-script.py (lookup_function): Same.
	* gdb.python/py-unwind-inline.py (dummy_unwinder): Same.
	* gdb.python/python.exp: Same.
	* gdb.rust/pp.py (lookup_function): Same.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* lib/gdb.exp (multi_line): Require more than one argument.
	* gdb.base/gdbinit-history.exp: Update multi_line call.
	* gdb.base/jit-reader.exp: Remove multi_line call.
	* gdb.fortran/dynamic-ptype-whatis.exp: Same.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/info-types.exp.tcl (match_line, gdb_test_lines): Move ...
	* lib/gdb.exp: ... here.
	* gdb.base/info-macros.exp: Use gdb_test_lines.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/info-types.exp.tcl (match_line): Handle --any.
	(gdb_test_lines): Factor out of ...
	(run_test): ... here.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/batch-preserve-term-settings.exp (spawn_shell): Fix
	matching of initial prompt.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.threads/multi-create-ns-info-thr.exp: Limit breakpoint regexp to
	one line.

2021-06-08  Tom de Vries  <tdevries@suse.de>

	* gdb.base/sect-cmd.exp: Use gdb_test.  Use -wrap "".  Fix
	test name.

2021-06-08  Tom de Vries  <tdevries@suse.de>