@@ -1,3 +1,7 @@
+2021-06-10  Tom de Vries  <tdevries@suse.de>
+
+	* gdb.cp/cplusfuncs.exp (info_func_regexp): Use gdb_test_lines.
+
 2021-06-09  Tom Tromey  <tromey@adacore.com>
 
 	* README (Example): Update read1 example.
